<resources>
    <string name="app_name">ES Collector</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- basemap menu items -->
    <string name="StreetMapMenu">Calles</string>
    <string name="TopoMenu">Topográfico</string>
    <string name="GrayMenu">Grises</string>
    <string name="OceanMenu">Oceános</string>
    <string name="SatelliteMenu">Satélite</string>

    <string name="local_tpk">Base_Cartografica500k_v2.tpk</string>
    <string name="offline_dir">carto</string>

    <string name="btn_add_form">Agregar formulario</string>
    <string name="btn_clear_map">Limpiar Mapa</string>
    <string name="btn_ok">Aceptar</string>
    <string name="btn_save_geomtry">Guardar Geometría</string>
    <string name="btn_save_form">Crear Formulario</string>
    <string name="btn_save">Guardar</string>
    <string name="btn_close">Terminar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_add">Adicionar</string>
    <string name="btn_prev">Anterior</string>
    <string name="btn_next">Siguiente</string>
    <string name="btn_delete">Eliminar</string>
    <string name="btn_edit">Editar</string>
    <string name="btn_select">Seleccionar</string>
    <string name="btn_yes">Sí</string>
    <string name="btn_no">No</string>
    <string name="take_photo">Capturar Foto</string>
    <string name="select_photo">Seleccionar Foto</string>
    <string name="btn_optional">Opcionales</string>
    <string name="btn_flecked">Moteados</string>
    <string name="btn_load_map">Cargar Cartografía</string>
    <string name="btn_load_geo">Cargar GeoDatabase</string>

    <string name="msg_confirm">Está seguro de realizar esta operación?</string>
    <string name="msg_gps">Por favor activar el GPS</string>
    <string name="msg_loading">Espere un momento...</string>
    <string name="msg_obs">Observaciones</string>

    <string name="ndi_home">Inicio</string>
    <string name="ndi_map">Mapa</string>
    <string name="ndi_forms">Formularios</string>
    <string name="ndi_summary">Resúmen</string>
    <string name="ndi_database">Bases de Datos</string>
    <string name="ndi_tpk">Cargar Cartografía</string>
    <string name="ndi_load_database">Cargar Bases de Datos</string>
    <string name="ndi_summary_par">Resúmen del día %s</string>

    <string name="tst_title">Formulario de Comprobación</string>
    <string name="fdn_title">Formulario de Nota de Campo</string>

    <string name="form_type">Tipo de Formulario</string>

    <string name="tst_general">General</string>
    <string name="tst_externa">Externa</string>
    <string name="tst_profile">Perfil</string>
    <string name="tst_no_observacion">Nro. Observación</string>
    <string name="tst_coords">Coordenadas</string>
    <string name="tst_reconocedor">Reconocedor *</string>
    <string name="tst_fecha">Fecha y Hora</string>
    <string name="tst_nombre_sitio">Nombre del Sitio *</string>
    <string name="tst_epoca">Época climática</string>
    <string name="tst_epoca_dias">Hace cuánto tiempo llovió (Días)</string>
    <string name="tst_gm">Geomorfología</string>
    <string name="tst_label_paisaje">Paisaje</string>
    <string name="tst_label_simbolo">Símbolo</string>
    <string name="tst_longitud">Pendiente Longitud *</string>
    <string name="tst_erosion">Grado de Erosión *</string>
    <string name="tst_movimiento">Tipos de Movimientos en Masa *</string>
    <string name="tst_anegamiento">Anegamiento *</string>
    <string name="tst_frecuencia">Frecuencia *</string>
    <string name="tst_duracion">Duración *</string>
    <string name="tst_pedegrosidad">Pedegrosidad Superficial *</string>
    <string name="tst_afloramiento">Afloramiento Rocoso*</string>
    <string name="tst_horizontes">Horizontes</string>
    <string name="tst_integral">Integral</string>
    <string name="tst_profundidad">Profundidad *</string>
    <string name="tst_color">Color *</string>
    <string name="tst_color_hue">Hue</string>
    <string name="tst_color_value">Value</string>
    <string name="tst_color_chroma">Chroma</string>
    <string name="tst_color_percent">Porcentaje de Color *</string>
    <string name="tst_material_type">Tipo de Material *</string>
    <string name="tst_texture">Textura *</string>
    <string name="tst_texture_modifiers">Modificadores de Textura *</string>
    <string name="tst_texture_percent">Porcentaje de Textura</string>
    <string name="tst_texture_other">¿Por qué? *</string>
    <string name="tst_structure">Estructura *</string>
    <string name="tst_horizonte_nro">Horizonte Nro. %d</string>
    <string name="tst_skyline_optional">Horizonte Opcional Nro. %d</string>
    <string name="tst_skyline_flecked">Horizonte Moteado Nro. %d</string>
    <string name="tst_skyline_type">Horizontes *</string>
    <string name="tst_organic_type">Textura *</string>
    <string name="tst_structure_form">Formas en que Rompe *</string>
    <string name="tst_structure_reasons">Motivo de la no estructura *</string>
    <string name="tst_soil_fragment">Fragmentos en suelo *</string>
    <string name="tst_input_natural_drainage">Drenaje natural *</string>
    <string name="tst_input_effective_depth">Profundidad efectiva *</string>
    <string name="tst_epidedones">Epidedones *</string>
    <string name="tst_endopedones">Endopedones *</string>
    <string name="tst_msg_required">Los campos marcados con * son obligatorios</string>

    <string name="fnd_other">Otros</string>
    <string name="fnd_gradiente">Gradiente *</string>
    <string name="fnd_longitud">Pendiente Longitud</string>
    <string name="fnd_forma">Pendiente Forma</string>
    <string name="fnd_erosion">Erosión (Clase, Tipo y Grado) *</string>
    <string name="fnd_movimiento">Movimientos en Masa (Clase, Tipo y Frecuencia)</string>
    <string name="fnd_vegetacion">Vegetación Natural</string>
    <string name="fnd_grupo">Grupo de Uso de la Tierra</string>
    <string name="fnd_subgrupo">Subgrupo de Uso de la Tierra</string>
    <string name="fnd_cultivo">Nombre del cultivo *</string>

    <string name="enterFileName">Digite el nombre del archivo:</string>
    <string name="saveButtonText">Guardar</string>
    <string name="cancelButtonText">Cancelar</string>
    <string name="cannotSaveFileMessage">Error al guardar el archivo</string>
    <string name="fileNameFirstMessage">Digite primero el nombre del archivo</string>
    <string name="okButtonText">Aceptar</string>
    <string name="loadButtonText">Cargar</string>
    <string name="accessDenied">Acceso Denegado</string>
    <string name="missingFile">No existe el archivo</string>
    <string name="newFolderButtonText">Directorio</string>
    <string name="newFolderDialogMessage">Crear Nuevo Directorio</string>
    <string name="createButtonText">Crear</string>
    <string name="fileCreationOk">Archivo creado exitosamente</string>
    <string name="folderCreationOk">Directorio creado exitosamente</string>
    <string name="folderCreationError">Error al crear el directorio</string>
    <string name="information">Información</string>

    <string name="dtb_select_file">Archivo Cargado Actualmente: %s</string>
    <string name="dtb_msg_map">Seleccione un archivo TPK</string>
    <string name="dtb_msg_geo">Seleccione un archivo GEODATABASE</string>

    <string name="map_empty_all">No ha cargado los archivos de cartografía y geodatabase. ¿Desea cargalo (Si) antes de continuar?</string>
    <string name="map_empty_map">No ha cargado el archivo  de cartografía. ¿Desea cargalo (Si) antes de continuar?</string>
    <string name="map_empty_geo">No ha cargado el archivo de geodatabase. ¿Desea cargalo (Si) antes de continuar?</string>
</resources>
