<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tst_horizonte_nro"
            android:textColor="@android:color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
            android:id="@+id/label_horizonte_nro"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tst_color"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <Spinner
            android:id="@+id/input_color_hue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/input_color_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/input_color_chroma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tst_color_percent"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/input_color_percent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:inputType="number"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tst_material_type"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <Spinner
        android:id="@+id/input_material_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tst_texture_percent"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/input_texture_percent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:inputType="number"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/label_texture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tst_texture"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <Spinner
            android:id="@+id/input_texture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/input_texture_modifiers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/label_organic_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tst_organic_type"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <Spinner
            android:id="@+id/input_organic_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/input_organic_type2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/label_texture_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tst_texture_other"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/input_texture_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:inputType="text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/label_structure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tst_structure"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <Spinner
            android:id="@+id/input_structure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/input_structure_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/input_structure_type2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/label_structure_type_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tst_texture_other"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/input_structure_type_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:inputType="text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/label_structure_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tst_structure_form"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <Spinner
        android:id="@+id/input_structure_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/label_structure_reasons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tst_structure_reasons"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <Spinner
        android:id="@+id/input_structure_reasons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tst_skyline_type"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <Spinner
        android:id="@+id/input_horizontes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>


</LinearLayout>
